--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -32,7 +32,7 @@
 	<key>FacebookAppID</key>
 	<string>1110565855774439</string>
 	<key>FacebookDisplayName</key>
-	<string>Subtle Asian Datamatch</string>
+	<string>Pear</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
