Added SF Pro Display fonts

--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -81,6 +81,9 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>FredokaOne-Regular.ttf</string>
+		<string>SF-Pro-Display-Medium.otf</string>
+		<string>SF-Pro-Display-Regular.otf</string>
+		<string>SF-Pro-Display-Light.otf</string>
 	</array>
 </dict>
 </plist>
