--- a/Pear/Supporting Files/GoogleService-Info.plist
+++ b/Pear/Supporting Files/GoogleService-Info.plist
@@ -23,15 +23,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>pear-59123.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:808130294159:ios:ec7c2c54d9a37049</string>
 	<key>DATABASE_URL</key>
