--- a/Pear/Supporting Files/GoogleService-Info.plist
+++ b/Pear/Supporting Files/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>808130294159-q5r6qg4v9gld59h71cfubdm21k1ajalm.apps.googleusercontent.com</string>
+	<string>808130294159-ciqdpk9nne2e8de786srf8a6pefj447c.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.808130294159-q5r6qg4v9gld59h71cfubdm21k1ajalm</string>
+	<string>com.googleusercontent.apps.808130294159-ciqdpk9nne2e8de786srf8a6pefj447c</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBFrwz40lVGXq5DuRPvDNuoh_7QmNVRJV4</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,23 +17,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.pear.pearapp</string>
+	<string>com.getpear.pear</string>
 	<key>PROJECT_ID</key>
 	<string>pear-59123</string>
 	<key>STORAGE_BUCKET</key>
 	<string>pear-59123.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:808130294159:ios:ec7c2c54d9a37049</string>
+	<string>1:808130294159:ios:0fdf632cfad1b8b9</string>
 	<key>DATABASE_URL</key>
 	<string>https://pear-59123.firebaseio.com</string>
 </dict>
