--- a/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
+++ b/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
@@ -67,6 +67,11 @@
             value = "1"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "NO">
+         </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
