Created UITest and fastlane testing route

--- a/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
+++ b/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BBD2842A223BFC1000AC6E30"
+               BuildableName = "PearUITests.xctest"
+               BlueprintName = "PearUITests"
+               ReferencedContainer = "container:Pear.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
