Added then removed custom xcconfig files

--- a/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
+++ b/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "053694F5F9C39FCA9EA4DA4A86BDE079"
+               BuildableName = "Pods_Pear.framework"
+               BlueprintName = "Pods-Pear"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "60C131BE21D342BC0093ECBA"
                BuildableName = "Pear.app"
                BlueprintName = "Pear"
@@ -72,11 +86,6 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "DEBUG"
-            value = "1"
-            isEnabled = "YES">
-         </EnvironmentVariable>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
             value = "disable"
