--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
+      - run: gem uninstall bundler
+      - run: gem install bundler
       - run: bundle install
       - run:
           name: Fastlane
