--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
-      - run: gem uninstall bundler
+      - run: gem uninstall bundler -y
       - run: gem install bundler
       - run: bundle install
       - run:
