--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
-      - run: gem uninstall -I bundler
-      - run: gem install bundler
+      - run: sudo gem uninstall bundler
+      - run: sudo gem install bundler
       - run: bundle install
       - run:
           name: Fastlane
