--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,13 @@ jobs:
     shell: /bin/bash --login -o pipefail
     steps:
       - checkout
+
+      - run: sudo gem update --system
       - run: sudo gem uninstall bundler
+      - run: sudo rm /usr/local/bin/bundle
+      - run: sudo rm /usr/local/bin/bundler
       - run: sudo gem install bundler
+
       - run: bundle install
       - run:
           name: Fastlane
