--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,11 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          name: Configure Bundler
-          command: |
-            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
-            source $BASH_ENV
-            gem install bundler
-
+      - run: sudo gem update --system
+      - run: echo | sudo gem uninstall bundler
+      - run: sudo rm /usr/local/bin/bundle
+      - run: sudo rm /usr/local/bin/bundler
+      - run: sudo gem install bundler
 
       - run: bundle install
       - run:
