--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - checkout
 
       - run: sudo gem update --system
-      - run: echo | sudo gem uninstall bundler
+      - run: echo | sudo gem uninstall -I bundler
       - run: sudo rm /usr/local/bin/bundle
       - run: sudo rm /usr/local/bin/bundler
       - run: sudo gem install bundler
