--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
       - run: sudo gem update --system
       - run: which bundler
       - run: echo | sudo gem uninstall -I bundler
-      - run: sudo rm /usr/local/bin/bundler
       - run: sudo gem install bundler
+      - run: bundler --version
 
       - run: bundle install
       - run:
