--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           name: Set Ruby Version
           command:  echo "ruby-2.4" > ~/.ruby-version
       - run: sudo gem update --system
-      - run: sudo gem install bundler
+      - run: sudo gem install --force bundler
       - run: bundler --version
 
       - run: bundle install
