--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,15 @@ jobs:
           command:  echo "ruby-2.4" > ~/.ruby-version
       - run: sudo gem update --system
       - run: sudo gem install --force bundler
-      - run: bundler --version
       - run: bundle install
+
+      - run:
+          name: Fetch CocoaPods Specs
+          command: |
+            curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+      - run:
+          name: Install CocoaPods
+          command: pod install --verbose
 
       - run:
           name: Fastlane
