--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ playground.xcworkspace
 # Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
-*.xcworkspace
+#*.xcworkspace
 
 # Carthage
 #
