--- a/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
+++ b/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
@@ -95,6 +95,12 @@
             ReferencedContainer = "container:Pear.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
