--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -34,9 +34,19 @@
 				<string>com.googleusercontent.apps.808130294159-ciqdpk9nne2e8de786srf8a6pefj447c</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>DynamicFirebaseLinks</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.getpear.pear</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>37</string>
+	<string>38</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -115,5 +125,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>FirebaseDynamicLinksCustomDomains</key>
+  <array>
+    <string>https://getpear.com/go</string>
+    <string>https://getpear.com/event</string>
+    <string>https://getpear.com/group</string>
+  </array>
 </dict>
 </plist>
