--- a/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
+++ b/Pear.xcodeproj/xcshareddata/xcschemes/Pear.xcscheme
@@ -76,7 +76,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Production"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
