Added fonts and  new flow files

--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -97,6 +97,28 @@
 	<string>To find your latest and greatest photos!</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>OpenSans-Bold.ttf</string>
+		<string>OpenSans-BoldItalic.ttf</string>
+		<string>OpenSans-ExtraBold.ttf</string>
+		<string>OpenSans-ExtraBoldItalic.ttf</string>
+		<string>OpenSans-Italic.ttf</string>
+		<string>OpenSans-Light.ttf</string>
+		<string>OpenSans-LightItalic.ttf</string>
+		<string>OpenSans-Regular.ttf</string>
+		<string>OpenSans-SemiBold.ttf</string>
+		<string>OpenSans-SemiBoldItalic.ttf</string>
+		<string>Cera Pro Black Italic.otf</string>
+		<string>Cera Pro Black.otf</string>
+		<string>Cera Pro Bold Italic.otf</string>
+		<string>Cera Pro Bold.otf</string>
+		<string>Cera Pro Light Italic.otf</string>
+		<string>Cera Pro Light.otf</string>
+		<string>Cera Pro Medium Italic.otf</string>
+		<string>Cera Pro Medium.otf</string>
+		<string>Cera Pro Regular Italic.otf</string>
+		<string>Cera Pro Regular.otf</string>
+		<string>Cera Pro Thin Italic.otf</string>
+		<string>Cera Pro Thin.otf</string>
 		<string>FredokaOne-Regular.ttf</string>
 		<string>SF-Pro-Display-Bold.otf</string>
 		<string>SF-Pro-Display-Medium.otf</string>
