--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -46,7 +46,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>66</string>
+	<string>69</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -68,6 +68,7 @@
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
 		<string>https://getpear.com/go</string>
+		<string>https://getpear.com/tags</string>
 		<string>https://getpear.com/event</string>
 		<string>https://getpear.com/group</string>
 	</array>
