--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -93,7 +93,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Quick!  Take a photo of them before they run away!</string>
 	<key>NSContactsUsageDescription</key>
-	<string>To roast/boast up your friends</string>
+	<string>To roast/boast your friends</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To make better matches!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
