--- a/Pear/Shared/RemoteConfig.plist
+++ b/Pear/Shared/RemoteConfig.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>pineapple_waitlist_enabled</key>
-	<string>YES</string>
+	<string>NO</string>
 	<key>pear_button_string</key>
 	<string>You&apos;ll be notified if someone pears you with them.</string>
 	<key>pear_button_enabled</key>
