--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -100,6 +100,7 @@
 	<string>To find your latest and greatest photos!</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Cera-Pro-Black.otf</string>
 		<string>OpenSans-Bold.ttf</string>
 		<string>OpenSans-ExtraBold.ttf</string>
 		<string>OpenSans-Light.ttf</string>
