--- a/Pear/Shared/RemoteConfig.plist
+++ b/Pear/Shared/RemoteConfig.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>whitelisted_phone_numbers</key>
+	<array>
+		<string>9738738225</string>
+	</array>
+	<key>distance_from_boston</key>
+	<real>200</real>
 	<key>location_blocking_enabled</key>
 	<true/>
 	<key>pineapple_waitlist_enabled</key>
