--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.14</string>
+	<string>1.0.15</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -95,7 +95,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>To roast/boast your friends</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Without location, we can&apos;t show you people nearby!</string>
+	<string>Without location, we can't show you people nearby!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To find your latest and greatest photos!</string>
 	<key>UIAppFonts</key>
