--- a/Pear/Supporting Files/Info.plist
+++ b/Pear/Supporting Files/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.16</string>
+	<string>1.0.17</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -95,7 +95,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>This allows you to matchmake and be matchmade for by your friends!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Without location, we can&apos;t show you people nearby!</string>
+	<string>Without location, we can't show you people nearby!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This allows you to upload photos to your profile.</string>
 	<key>UIAppFonts</key>
